--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
         overflow: hidden;
         margin: 0 auto;
         position: relative;
-        width: 50%;
+        width: 394px;
         height: 100%;
     }
     #video{
